--- a/index.html
+++ b/index.html
@@ -9,50 +9,54 @@
       background: linear-gradient(135deg, #e0e7ff, #f3f4f6);
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start; /* Align to top for mobile */
       min-height: 100vh;
       margin: 0;
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
     }
     .container {
       background: rgba(255, 255, 255, 0.95);
-      padding: 2.5rem;
+      padding: 1.5rem; /* Reduced for mobile */
       border-radius: 1rem;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Lighter shadow */
       width: 100%;
-      max-width: 900px; /* Increased to accommodate two-column layout */
+      max-width: 900px; /* Desktop width */
       text-align: center;
       transition: transform 0.3s ease;
       display: flex;
-      flex-direction: row;
+      flex-direction: column; /* Stack on mobile by default */
       gap: 1rem;
     }
     .container:hover {
       transform: translateY(-2px);
     }
     h1 {
-      font-size: 1.75rem;
+      font-size: 1.5rem; /* Reduced for mobile */
       font-weight: 700;
       background: linear-gradient(to right, #2563eb, #4f46e5);
       -webkit-background-clip: text;
       color: transparent;
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
     }
     h2 {
-      font-size: 1.5rem;
+      font-size: 1.25rem; /* Reduced for mobile */
       font-weight: 600;
       color: #1f2937;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
     }
     button {
       padding: 0.75rem 1.5rem;
       border: none;
-      border-radius: 9999px;
+      border-radius: 9999px; /* Pill shape */
       cursor: pointer;
-      font-size: 1rem;
+      font-size: 0.875rem; /* Smaller for mobile */
       font-weight: 500;
       transition: all 0.3s ease;
       transform: scale(1);
+      min-width: 120px; /* Ensure touch-friendly size */
+      margin: 0.25rem 0; /* Consistent spacing */
     }
     button:hover {
       transform: scale(1.05);
@@ -83,7 +87,7 @@
       background-color: #059669;
     }
     .form-group {
-      margin-bottom: 1.25rem;
+      margin-bottom: 1rem;
       text-align: left;
     }
     label {
@@ -91,13 +95,14 @@
       margin-bottom: 0.5rem;
       font-weight: 500;
       color: #374151;
+      font-size: 0.875rem; /* Smaller for mobile */
     }
     input[type="number"], select, input[type="file"] {
       width: 100%;
       padding: 0.75rem;
       border: 1px solid #d1d5db;
       border-radius: 0.5rem;
-      font-size: 1rem;
+      font-size: 0.875rem; /* Smaller for mobile */
       background: #f9fafb;
       transition: border-color 0.3s ease;
     }
@@ -108,12 +113,14 @@
     .flex {
       display: flex;
       justify-content: space-between;
-      gap: 1rem;
+      gap: 0.5rem; /* Reduced gap for mobile */
+      flex-wrap: wrap; /* Allow wrapping on small screens */
     }
     p {
-      margin: 0.75rem 0;
+      margin: 0.5rem 0; /* Reduced margin for mobile */
       text-align: left;
       color: #374151;
+      font-size: 0.875rem; /* Smaller for mobile */
     }
     .capitalize {
       text-transform: capitalize;
@@ -135,7 +142,7 @@
       background: white;
       padding: 1.5rem;
       border-radius: 0.75rem;
-      width: 100%;
+      width: 90%; /* Full width on mobile */
       max-width: 360px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       text-align: left;
@@ -158,14 +165,14 @@
       font-weight: bold;
     }
     .alert-title {
-      font-size: 1.125rem;
+      font-size: 1rem; /* Reduced for mobile */
       font-weight: 600;
       color: #1f2937;
     }
     .alert-message {
       color: #374151;
       margin-bottom: 1rem;
-      font-size: 0.875rem;
+      font-size: 0.875rem; /* Smaller for mobile */
     }
     video, canvas {
       width: 100%;
@@ -176,24 +183,24 @@
       display: none;
     }
     .thumbnail-container {
-      width: 150px; /* Fixed width for thumbnails */
-      overflow-y: auto; /* Allow vertical scroll if needed, though we'll fit pages */
-      padding-right: 1rem;
+      width: 120px; /* Reduced for mobile */
+      overflow-y: auto;
+      padding-right: 0.5rem;
       border-right: 1px solid #d1d5db;
     }
     .thumbnail {
-      margin: 0.5rem 0;
+      margin: 0.25rem 0; /* Reduced margin for mobile */
       text-align: center;
       cursor: pointer;
     }
     .thumbnail img {
       max-width: 100%;
-      max-height: 100px; /* Smaller thumbnails */
+      max-height: 80px; /* Smaller thumbnails for mobile */
       border: 1px solid #d1d5db;
       border-radius: 0.25rem;
     }
     .thumbnail input[type="checkbox"] {
-      margin-right: 0.5rem;
+      margin-right: 0.25rem; /* Reduced for mobile */
     }
     .thumbnail.selected {
       border: 2px solid #2563eb;
@@ -206,11 +213,57 @@
     }
     .preview {
       max-width: 100%;
-      max-height: 600px; /* Larger centered preview */
+      max-height: 400px; /* Reduced for mobile */
     }
     .preview img {
       border: 1px solid #d1d5db;
       border-radius: 0.25rem;
+    }
+    @media (min-width: 601px) { /* Desktop and tablet */
+      .container {
+        flex-direction: row;
+        padding: 2.5rem;
+      }
+      h1 {
+        font-size: 1.75rem;
+      }
+      h2 {
+        font-size: 1.5rem;
+      }
+      button {
+        font-size: 1rem;
+        min-width: 140px;
+      }
+      label, p, input[type="number"], select {
+        font-size: 1rem;
+      }
+      .alert-title {
+        font-size: 1.125rem;
+      }
+      .alert-message {
+        font-size: 1rem;
+      }
+      .thumbnail-container {
+        width: 150px;
+      }
+      .thumbnail img {
+        max-height: 100px;
+      }
+      .preview {
+        max-height: 600px;
+      }
+      .flex {
+        gap: 1rem;
+      }
+      .form-group, p {
+        margin-bottom: 1.25rem;
+      }
+      .thumbnail {
+        margin: 0.5rem 0;
+      }
+      .thumbnail input[type="checkbox"] {
+        margin-right: 0.5rem;
+      }
     }
     @keyframes fadeIn {
       from { opacity: 0; }
@@ -239,8 +292,8 @@
       scanMode: false,
       imageData: null,
       fileData: null,
-      selectedPages: [], // Array to store selected page numbers (1-based index)
-      currentPreviewPage: 1, // Track the currently selected page for preview
+      selectedPages: [],
+      currentPreviewPage: 1,
       copies: 1,
       color: 'bw',
       totalCost: 0,
@@ -262,9 +315,11 @@
       if (state.screen === 'menu') {
         app.innerHTML = `
           <h1>Internet Cafe Machine</h1>
-          <button class="btn-blue" onclick="selectService('print')" aria-label="Select Print Service">Print</button>
-          <button class="btn-blue" onclick="selectService('copy')" aria-label="Select Copy Service">Copy</button>
-          <button class="btn-blue" onclick="selectService('scan')" aria-label="Select Scan Service">Scan</button>
+          <div class="flex">
+            <button class="btn-blue" onclick="selectService('print')" aria-label="Select Print Service">Print</button>
+            <button class="btn-blue" onclick="selectService('copy')" aria-label="Select Copy Service">Copy</button>
+            <button class="btn-blue" onclick="selectService('scan')" aria-label="Select Scan Service">Scan</button>
+          </div>
         `;
         console.log('Main menu rendered with Print, Copy, and Scan buttons');
       } else if (state.screen === 'options') {
@@ -287,7 +342,7 @@
                   <label>Preview:</label>
                   <canvas id="canvas"></canvas>
                 ` : state.fileData?.startsWith('data:application/pdf') ? `
-                  <div style="display: flex;">
+                  <div style="display: flex; flex-direction: column; gap: 1rem;">
                     <div class="thumbnail-container" id="thumbnail-container"></div>
                     <div class="preview-container">
                       <div class="preview" id="preview"></div>
