--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       background: linear-gradient(135deg, #e0e7ff, #f3f4f6);
       display: flex;
       justify-content: center;
-      align-items: flex-start; /* Align to top for mobile */
+      align-items: flex-start;
       min-height: 100vh;
       margin: 0;
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -18,22 +18,22 @@
     }
     .container {
       background: rgba(255, 255, 255, 0.95);
-      padding: 1.5rem; /* Reduced for mobile */
+      padding: 1.5rem;
       border-radius: 1rem;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Lighter shadow */
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       width: 100%;
-      max-width: 900px; /* Desktop width */
+      max-width: 900px;
       text-align: center;
       transition: transform 0.3s ease;
       display: flex;
-      flex-direction: column; /* Stack on mobile by default */
+      flex-direction: column;
       gap: 1rem;
     }
     .container:hover {
       transform: translateY(-2px);
     }
     h1 {
-      font-size: 1.5rem; /* Reduced for mobile */
+      font-size: 1.5rem;
       font-weight: 700;
       background: linear-gradient(to right, #2563eb, #4f46e5);
       -webkit-background-clip: text;
@@ -41,7 +41,7 @@
       margin-bottom: 1rem;
     }
     h2 {
-      font-size: 1.25rem; /* Reduced for mobile */
+      font-size: 1.25rem;
       font-weight: 600;
       color: #1f2937;
       margin-bottom: 1rem;
@@ -49,14 +49,14 @@
     button {
       padding: 0.75rem 1.5rem;
       border: none;
-      border-radius: 9999px; /* Pill shape */
+      border-radius: 9999px;
       cursor: pointer;
-      font-size: 0.875rem; /* Smaller for mobile */
+      font-size: 0.875rem;
       font-weight: 500;
       transition: all 0.3s ease;
       transform: scale(1);
-      min-width: 120px; /* Ensure touch-friendly size */
-      margin: 0.25rem 0; /* Consistent spacing */
+      min-width: 120px;
+      margin: 0.25rem 0;
     }
     button:hover {
       transform: scale(1.05);
@@ -95,14 +95,14 @@
       margin-bottom: 0.5rem;
       font-weight: 500;
       color: #374151;
-      font-size: 0.875rem; /* Smaller for mobile */
+      font-size: 0.875rem;
     }
     input[type="number"], select, input[type="file"] {
       width: 100%;
       padding: 0.75rem;
       border: 1px solid #d1d5db;
       border-radius: 0.5rem;
-      font-size: 0.875rem; /* Smaller for mobile */
+      font-size: 0.875rem;
       background: #f9fafb;
       transition: border-color 0.3s ease;
     }
@@ -113,14 +113,14 @@
     .flex {
       display: flex;
       justify-content: space-between;
-      gap: 0.5rem; /* Reduced gap for mobile */
-      flex-wrap: wrap; /* Allow wrapping on small screens */
+      gap: 0.5rem;
+      flex-wrap: wrap;
     }
     p {
-      margin: 0.5rem 0; /* Reduced margin for mobile */
+      margin: 0.5rem 0;
       text-align: left;
       color: #374151;
-      font-size: 0.875rem; /* Smaller for mobile */
+      font-size: 0.875rem;
     }
     .capitalize {
       text-transform: capitalize;
@@ -142,7 +142,7 @@
       background: white;
       padding: 1.5rem;
       border-radius: 0.75rem;
-      width: 90%; /* Full width on mobile */
+      width: 90%;
       max-width: 360px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       text-align: left;
@@ -165,14 +165,14 @@
       font-weight: bold;
     }
     .alert-title {
-      font-size: 1rem; /* Reduced for mobile */
+      font-size: 1rem;
       font-weight: 600;
       color: #1f2937;
     }
     .alert-message {
       color: #374151;
       margin-bottom: 1rem;
-      font-size: 0.875rem; /* Smaller for mobile */
+      font-size: 0.875rem;
     }
     video, canvas {
       width: 100%;
@@ -182,44 +182,46 @@
     #print-iframe {
       display: none;
     }
-    .thumbnail-container {
-      width: 120px; /* Reduced for mobile */
-      overflow-y: auto;
-      padding-right: 0.5rem;
-      border-right: 1px solid #d1d5db;
-    }
-    .thumbnail {
-      margin: 0.25rem 0; /* Reduced margin for mobile */
-      text-align: center;
-      cursor: pointer;
-    }
-    .thumbnail img {
-      max-width: 100%;
-      max-height: 80px; /* Smaller thumbnails for mobile */
-      border: 1px solid #d1d5db;
-      border-radius: 0.25rem;
-    }
-    .thumbnail input[type="checkbox"] {
-      margin-right: 0.25rem; /* Reduced for mobile */
-    }
-    .thumbnail.selected {
-      border: 2px solid #2563eb;
-    }
     .preview-container {
       flex-grow: 1;
       display: flex;
       justify-content: center;
       align-items: center;
+      max-width: 60%; /* Limit preview width on desktop */
     }
     .preview {
       max-width: 100%;
-      max-height: 400px; /* Reduced for mobile */
+      max-height: 400px;
     }
     .preview img {
       border: 1px solid #d1d5db;
       border-radius: 0.25rem;
     }
-    @media (min-width: 601px) { /* Desktop and tablet */
+    .thumbnail-container {
+      width: 120px;
+      overflow-y: auto; /* Enable scrolling for thumbnails */
+      max-height: 400px; /* Fixed height for scrolling */
+      padding-left: 0.5rem;
+      border-left: 1px solid #d1d5db; /* Moved border to left */
+    }
+    .thumbnail {
+      margin: 0.25rem 0;
+      text-align: center;
+      cursor: pointer;
+    }
+    .thumbnail img {
+      max-width: 100%;
+      max-height: 80px;
+      border: 1px solid #d1d5db;
+      border-radius: 0.25rem;
+    }
+    .thumbnail input[type="checkbox"] {
+      margin-right: 0.25rem;
+    }
+    .thumbnail.selected {
+      border: 2px solid #2563eb;
+    }
+    @media (min-width: 601px) {
       .container {
         flex-direction: row;
         padding: 2.5rem;
@@ -243,14 +245,18 @@
       .alert-message {
         font-size: 1rem;
       }
-      .thumbnail-container {
-        width: 150px;
-      }
-      .thumbnail img {
-        max-height: 100px;
+      .preview-container {
+        max-width: 65%; /* Slightly wider on desktop */
       }
       .preview {
         max-height: 600px;
+      }
+      .thumbnail-container {
+        width: 150px;
+        max-height: 600px; /* Adjust for desktop */
+      }
+      .thumbnail img {
+        max-height: 100px;
       }
       .flex {
         gap: 1rem;
@@ -343,10 +349,10 @@
                   <canvas id="canvas"></canvas>
                 ` : state.fileData?.startsWith('data:application/pdf') ? `
                   <div style="display: flex; flex-direction: column; gap: 1rem;">
-                    <div class="thumbnail-container" id="thumbnail-container"></div>
                     <div class="preview-container">
                       <div class="preview" id="preview"></div>
                     </div>
+                    <div class="thumbnail-container" id="thumbnail-container"></div>
                   </div>
                 ` : `
                   <label>File:</label>
@@ -571,7 +577,7 @@
 
         for (let pageNum = 1; pageNum <= numPages; pageNum++) {
           const page = await pdf.getPage(pageNum);
-          const viewport = page.getViewport({ scale: 0.25 }); // Smaller scale for thumbnails
+          const viewport = page.getViewport({ scale: 0.25 });
           const canvas = document.createElement('canvas');
           const context = canvas.getContext('2d');
           canvas.height = viewport.height;
@@ -589,7 +595,7 @@
           thumbnailContainer.appendChild(thumbnailDiv);
 
           if (pageNum === state.currentPreviewPage) {
-            const previewViewport = page.getViewport({ scale: 1.0 }); // Full scale for preview
+            const previewViewport = page.getViewport({ scale: 1.0 });
             const previewCanvas = document.createElement('canvas');
             const previewContext = previewCanvas.getContext('2d');
             previewCanvas.height = previewViewport.height;
@@ -618,7 +624,7 @@
 
     function selectPreview(pageNum) {
       state.currentPreviewPage = pageNum;
-      renderPDFPages(); // Re-render to update the preview
+      renderPDFPages();
     }
 
     // State updates
@@ -674,7 +680,7 @@
       let costPerPage = 0;
       if (state.service === 'print') {
         costPerPage = state.color === 'bw' ? PRICING.print.bw : PRICING.print.color;
-        const pageCount = state.selectedPages.length || 1; // Default to 1 page if no selection
+        const pageCount = state.selectedPages.length || 1;
         state.totalCost = (costPerPage * pageCount * state.copies).toFixed(2);
       } else if (state.service === 'copy') {
         costPerPage = state.color === 'bw' ? PRICING.copy.bw : PRICING.copy.color;
